Doc changes, fixed part of css for scrollbar container

--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -63,13 +63,13 @@ nav {
   display: flex;
   flex-wrap: wrap;
   max-height: 70%;
-  height: auto;
+  height: inherit;
   margin: 30px 0 30px 30px;
   max-width: 1200px;
   row-gap: 20px;
-  width: 100%;
   overflow-y: scroll;
   scrollbar-width: thin;
+  width: inherit;
 }
 
 body {
